<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivationActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Activation"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:fontFamily="@font/prompt_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:letterSpacing="0.02"
        android:text="@string/activation"
        android:textAlignment="center"
        android:textSize="14sp"
        android:fontFamily="@font/prompt_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cursorVisible="false"
        app:forceKeyboard="true"
        app:hint="0"
        app:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/tvResendCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:password="false"
        app:pinBackground="@color/oniki_gray"
        app:pinHeight="50dp"
        app:pinLength="6"
        app:splitWidth="8dp"
        app:pinWidth="50dp" />

    <TextView
        android:id="@+id/tvResendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/resend"
        android:textColor="@color/oniki_red"
        android:textSize="16sp"
        android:fontFamily="@font/prompt_regular"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirmActivation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmActivation"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/custom_button"
        android:text="Confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/prompt_medium"
        app:layout_constraintBottom_toTopOf="@+id/tvAlreadyHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/already_have_an_account"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:fontFamily="@font/prompt_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/sign_in"
        android:fontFamily="@font/prompt_regular"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAlreadyHaveAccount"
        app:layout_constraintStart_toEndOf="@+id/tvAlreadyHaveAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>